force-app/main/default/objects/Dermal_Filler__c/Dermal_Filler__c.object-meta.xml
<CustomObject>
    <label>Dermal Filler</label>
    <nameField>
        <label>Dermal Filler Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dermal Filler</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>