force-app/main/default/objects/Dermal_Filler__c/fields/Chart__c.field-meta.xml
<CustomField>
    <fullName>Chart__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chart</label>
    <referenceTo>Chart__c</referenceTo>
    <relationshipLabel>Dermal Filler</relationshipLabel>
    <relationshipName>Dermal_Filler</relationshipName>
    <type>Lookup</type>
</CustomField>