force-app/main/default/objects/Dermal_Filler__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Dermal Filler</relationshipLabel>
    <relationshipName>Dermal_Filler</relationshipName>
    <type>Lookup</type>
</CustomField>