force-app/main/default/objects/Dermal_Filler__c/fields/Injectable_Notes_Dermal_Filler__c.field-meta.xml
<CustomField>
    <fullName>Injectable_Notes_Dermal_Filler__c</fullName>
    <label>Injectable Notes Dermal Filler</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>